--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -15,10 +15,6 @@ on:
       codecov_token:
         description: Codecov token
         required: true
-      rails_master_key:
-        description: The Rails master key
-        required: true
- 
 
 jobs:
   build:
@@ -76,21 +72,33 @@ jobs:
           name: app
 
       - name: Lint
-        env:
-          RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
         run: |
           EXIT_STATUS=0
-          ./actionlint -ignore 'SC2153:'  -ignore 'property "sha" is not defined in object type {}' || \
+          ./actionlint \
+          -ignore 'property "gh_app_private_key" is not defined' \
+          -ignore 'SC2153:' \
+          -ignore 'property "sha" is not defined in object type {}' || \
           EXIT_STATUS=$?
-          docker run -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=postgres -e POSTGRES_HOST=localhost -e \
-            RAILS_MASTER_KEY --network=host app bin/ci.sh lint || EXIT_STATUS=$?
+          docker run \
+          -e POSTGRES_USER=postgres \
+          -e POSTGRES_PASSWORD=postgres \
+          -e POSTGRES_HOST=localhost \
+          --network=host \
+          app bin/ci.sh lint || \
+          EXIT_STATUS=$?
           exit $EXIT_STATUS
 
   test:
     name: Test
     runs-on: ubuntu-latest
     needs: build
+    env:
+      CAMO_KEY: secret_camo_key
     services:
+      camo:
+        image: rx14/camo.cr:latest
+        env:
+          PORT: 9090
       db:
         image: postgres:14.7
         env:
@@ -120,11 +128,18 @@ jobs:
 
       - name: Test
         env:
-          RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
+          CAMO_HOST: localhost:9090
         run: |
           mkdir coverage
-          docker run -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=postgres -e POSTGRES_HOST=localhost -e \
-            RAILS_MASTER_KEY --network=host -v "$(pwd)"'/coverage:/app/coverage' app bin/ci.sh spec
+          docker run \
+          -e CAMO_KEY \
+          -e CAMO_HOST \
+          -e POSTGRES_USER=postgres \
+          -e POSTGRES_PASSWORD=postgres \
+          -e POSTGRES_HOST=localhost \
+          --network=host \
+          -v "$(pwd)"'/coverage:/app/coverage' \
+          app bin/ci.sh spec
 
       - name: Upload coverage report to Codecov
         if: ${{ !cancelled() }}
